@@ -17,7 +17,9 @@
  */
 package org.drftpd.util;
 
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+
 import org.drftpd.event.LoadPluginEvent;
 import org.drftpd.event.UnloadPluginEvent;
 import org.java.plugin.PluginLifecycleException;
@@ -45,7 +47,7 @@ import java.util.*;
  */
 public class MasterPluginUtils extends CommonPluginUtils {
 
-	private static final Logger logger = Logger.getLogger(MasterPluginUtils.class);
+	private static final Logger logger = LogManager.getLogger(MasterPluginUtils.class);
 
 	/**
 	 * Get a <tt>Set</tt> containing the currently loaded extensions which belong to the unloaded plugin.
@@ -299,59 +301,48 @@ public class MasterPluginUtils extends CommonPluginUtils {
 							Class<T> pluginCls = loadPluginClass(pluginLoader,
 									plugin.getParameter(classParamName).valueAsString());
 							if (constructorSig == null) {
-								loadedExtensions.add(pluginCls.newInstance());
+								loadedExtensions.add(pluginCls.getDeclaredConstructor().newInstance());
 							} else {
 								loadedExtensions.add(pluginCls.getConstructor(constructorSig).newInstance(constructorArgs));
 							}
 						} catch (ClassNotFoundException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", requested class "+plugin.getParameter(classParamName).valueAsString()
-										+" not found",e);
+                                logger.warn("Error loading plugin {}, requested class {} not found", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(classParamName).valueAsString(), e);
 							}
 							if (failOnError) {
 								throw e;
 							}
 						} catch (IllegalAccessException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", requested class "+plugin.getParameter(classParamName).valueAsString()
-										+" has no default constructor",e);
+                                logger.warn("Error loading plugin {}, requested class {} has no default constructor", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(classParamName).valueAsString(), e);
 							}
 							if (failOnError) {
 								throw e;
 							}
 						} catch (InstantiationException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", requested class "+plugin.getParameter(classParamName).valueAsString()
-										+" is not a concrete class",e);
+                                logger.warn("Error loading plugin {}, requested class {} is not a concrete class", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(classParamName).valueAsString(), e);
 							}
 							if (failOnError) {
 								throw e;
 							}
 						} catch (InvocationTargetException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", requested constructor in class "+plugin.getParameter(classParamName).valueAsString()
-										+" threw an exception",e);
+                                logger.warn("Error loading plugin {}, requested constructor in class {} threw an exception", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(classParamName).valueAsString(), e);
 							}
 							if (failOnError) {
 								throw e;
 							}
 						} catch (NoSuchMethodException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", requested constructor in class "+plugin.getParameter(classParamName).valueAsString()
-										+" not found",e);
+                                logger.warn("Error loading plugin {}, requested constructor in class {} not found", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(classParamName).valueAsString(), e);
 							}
 							if (failOnError) {
 								throw e;
 							}
 						} catch (PluginLifecycleException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", plugin not found or can't be activated",e);
+                                logger.warn("Error loading plugin {}, plugin not found or can't be activated", plugin.getDeclaringPluginDescriptor().getId(), e);
 							}
 							if (failOnError) {
 								throw e;
@@ -881,7 +872,7 @@ public class MasterPluginUtils extends CommonPluginUtils {
 							if (createInstance) {
 								T pluginInstance = null;
 								if (constructorSig == null) {
-									pluginInstance = pluginCls.newInstance();
+									pluginInstance = pluginCls.getDeclaredConstructor().newInstance();
 								} else {
 									pluginInstance = pluginCls.getConstructor(constructorSig).newInstance(constructorArgs);
 								}
@@ -894,10 +885,7 @@ public class MasterPluginUtils extends CommonPluginUtils {
 										container = new PluginObjectContainer<>(pluginCls, pluginInstance, plugin, pluginMethod);
 									} catch (NoSuchMethodException e) {
 										if (logError) {
-											logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-													+", requested method "+plugin.getParameter(methodParamName).valueAsString()
-													+" in class "+plugin.getParameter(classParamName).valueAsString()
-													+" not found",e);
+                                            logger.warn("Error loading plugin {}, requested method {} in class {} not found", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(methodParamName).valueAsString(), plugin.getParameter(classParamName).valueAsString(), e);
 										}
 										if (failOnError) {
 											throw e;
@@ -911,53 +899,42 @@ public class MasterPluginUtils extends CommonPluginUtils {
 							loadedExtensions.add(container);
 						} catch (ClassNotFoundException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", requested class "+plugin.getParameter(classParamName).valueAsString()
-										+" not found",e);
+                                logger.warn("Error loading plugin {}, requested class {} not found", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(classParamName).valueAsString(), e);
 							}
 							if (failOnError) {
 								throw e;
 							}
 						} catch (IllegalAccessException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", requested class "+plugin.getParameter(classParamName).valueAsString()
-										+" has no default constructor",e);
+                                logger.warn("Error loading plugin {}, requested class {} has no default constructor", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(classParamName).valueAsString(), e);
 							}
 							if (failOnError) {
 								throw e;
 							}
 						} catch (InstantiationException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", requested class "+plugin.getParameter(classParamName).valueAsString()
-										+" is not a concrete class",e);
+                                logger.warn("Error loading plugin {}, requested class {} is not a concrete class", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(classParamName).valueAsString(), e);
 							}
 							if (failOnError) {
 								throw e;
 							}
 						} catch (InvocationTargetException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", requested constructor in class "+plugin.getParameter(classParamName).valueAsString()
-										+" threw an exception",e);
+                                logger.warn("Error loading plugin {}, requested constructor in class {} threw an exception", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(classParamName).valueAsString(), e);
 							}
 							if (failOnError) {
 								throw e;
 							}
 						} catch (NoSuchMethodException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", requested constructor in class "+plugin.getParameter(classParamName).valueAsString()
-										+" not found",e);
+                                logger.warn("Error loading plugin {}, requested constructor in class {} not found", plugin.getDeclaringPluginDescriptor().getId(), plugin.getParameter(classParamName).valueAsString(), e);
 							}
 							if (failOnError) {
 								throw e;
 							}
 						} catch (PluginLifecycleException e) {
 							if (logError) {
-								logger.warn("Error loading plugin "+plugin.getDeclaringPluginDescriptor().getId()
-										+", plugin not found or can't be activated",e);
+                                logger.warn("Error loading plugin {}, plugin not found or can't be activated", plugin.getDeclaringPluginDescriptor().getId(), e);
 							}
 							if (failOnError) {
 								throw e;
